resolved whitespace issue on single discourse template

--- a/common/common.scss
+++ b/common/common.scss
@@ -2614,3 +2614,7 @@ ol.category-breadcrumb {
 .title i.fa.fa-home.d-icon.d-icon-home::before {
   content: '';
 }
+
+#main-outlet-wrapper .sidebar-wrapper {
+  display: none;
+}
